add rancher pipeline data
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <div *ngIf="userData" class="container-fluid bg-white h-100 "> -->
-    <div class="container-fluid bg-white h-100 ">
+<div class="container-fluid bg-white h-100 ">
     <!-- <app-header></app-header> -->
     <div class="row shadow">
         <div class="col-md-12">
@@ -11,7 +11,8 @@
                     routerLinkActive="active" style="outline: 0;"> <i
                         class="fa fa-home text-secondary font-size-25 my-auto"></i></div>
                 <div class="col-auto my-auto">
-                    <a class="btn btn-link" href="https://e2e.mayadata.io/docs/getstarted" target="_blank">E2E test plan</a>
+                    <a class="btn btn-link" href="https://e2e.mayadata.io/docs/getstarted" target="_blank">E2E test
+                        plan</a>
                 </div>
                 <!-- <div class="col-auto border-left d-flex align-middle pt-2">
                     <div class="user-avatar align-middle mx-2">
