--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -26,7 +26,7 @@
 								</a>
 							</td>
 							<td>{{getTriggerTime(pipeline.jobs[0].started_at)}} ago</td>
-							<td>NA</td>
+							<td>{{pipeline.release_tag}}</td>
 							<td>
 								<a routerLink="pipeline/e2e-test/{{pipeline.pipelineid}}/platform/rancher"
 									routerLinkActive="active" target="_blank">
@@ -65,7 +65,24 @@
 									</div>
 								</a>
 							</td>
-							<td>NA</td>
+							<td>
+								<div *ngIf="pipelineTooltip(pipeline) != '' && pipeline.coverage != 'NA';else coverageNA"
+									class="text-dark" ngbTooltip="{{coverageTooltip(pipeline)}}" placement="top">
+									<svg width='50' height='10'>
+										<g>
+											<rect fill='#FB6977' width='100%' height='10' rx="1"></rect>
+											<rect fill='#009400'
+												[ngStyle]="{'width':getCoveragePercentage(pipeline.coverage)}"
+												height='10'></rect>
+										</g>
+									</svg>
+									<span style="font-size: 12px;">{{pipeline.coverage}}</span>
+								</div>
+
+							<ng-template #coverageNA>
+								<span class="text-dark">NA</span>
+							</ng-template>
+							</td>
 						</tr>
 					</tbody>
 				</table>
