add total test cases count on coverage tooltip
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -65,7 +65,7 @@
 									</div>
 								</a>
 							</td>
-							<td>
+							<td class="coverage-content">
 								<div *ngIf="pipelineTooltip(pipeline) != '' && pipeline.coverage != 'NA';else coverageNA"
 									class="text-dark" ngbTooltip="{{coverageTooltip(pipeline)}}" placement="top">
 									<svg width='50' height='10'>
