add AWS Konvoy pipelines in dashboard
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
@@ -108,3 +108,11 @@ thead {
     transition-delay: 0s;
   }
 }
+.activePlatformBtn{
+  background-color: #2E7BFF;
+  color: #ffff;
+}
+.deactivePlatformBtn{
+  background-color: #D1D2D9;
+  color: #626372;
+}
