--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -2,10 +2,13 @@
 	<div class="row">
 		<div class="col-md-3 shadow bg-light">
 			<div class="mt-5">
-				<div class="rounded bg-primary text-white py-2 px-1 text-center">Rancher</div>
+				<div [ngClass]="platformBtn(activePlatform, 'rancher')" class="rounded py-2 px-1 text-center" (click)="platformChange('rancher')">Rancher</div>
 			</div>
 			<div class="mt-5">
-				<div class="rounded bg-secondary text-white py-2 px-1 text-center" disabled>Konvoy</div>
+				<div [ngClass]="platformBtn(activePlatform, 'konvoy')"  class="rounded py-2 px-1 text-center" (click)="platformChange('konvoy')" >Konvoy</div>
+			</div>
+			<div class="mt-5">
+				<div [ngClass]="platformBtn(activePlatform, 'aws')"  class="rounded py-2 px-1 text-center" (click)="platformChange('aws')" >AWS</div>
 			</div>
 		</div>
 		<div class="col-md-9">
@@ -19,16 +22,16 @@
 						<th>Coverage</th>
 					</thead>
 					<tbody>
-						<tr *ngFor="let pipeline of rancherPipelineData">
+						<tr *ngFor="let pipeline of pipelineData">
 							<td>
-								<a routerLink="pipeline/e2e-test/{{pipeline.pipelineid}}/platform/rancher"
+								<a routerLink="pipeline/e2e-test/{{pipeline.pipelineid}}/platform/{{activePlatform}}"
 									routerLinkActive="active" target="_blank">{{pipeline.pipelineid}}
 								</a>
 							</td>
-							<td>{{getTriggerTime(pipeline.jobs[0].started_at)}} ago</td>
+							<td *ngIf="pipeline.jobs != null ">{{getTriggerTime(pipeline.jobs[0].started_at)}} ago</td>
 							<td>{{pipeline.release_tag}}</td>
 							<td>
-								<a routerLink="pipeline/e2e-test/{{pipeline.pipelineid}}/platform/rancher"
+								<a routerLink="pipeline/e2e-test/{{pipeline.pipelineid}}/platform/{{activePlatform}}"
 									routerLinkActive="active" target="_blank">
 									<div *ngIf="pipeline.status !== '';else pipelineNotTrigger">
 										<div  class="d-inline-block" ngbTooltip="{{ pipelineTooltip(pipeline)}}" placement="right">
@@ -70,8 +73,8 @@
 									class="text-dark" ngbTooltip="{{coverageTooltip(pipeline)}}" placement="top">
 									<svg width='50' height='10'>
 										<g>
-											<rect fill='#FB6977' width='100%' height='10' rx="1"></rect>
-											<rect fill='#009400'
+											<rect fill='#E6EDFF' width='100%' height='10' rx="1"></rect>
+											<rect fill='#0063FF'
 												[ngStyle]="{'width':getCoveragePercentage(pipeline.coverage)}"
 												height='10'></rect>
 										</g>
