--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
@@ -111,8 +111,10 @@ thead {
 .activePlatformBtn{
   background-color: #2E7BFF;
   color: #ffff;
+  cursor: pointer;
 }
 .deactivePlatformBtn{
   background-color: #D1D2D9;
   color: #626372;
+  cursor: pointer;
 }
