fix : automated counts and douhnut graph metrics
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/pipeline-detail/pipeline-detail.component.html
+++ b/src/app/pipeline-detail/pipeline-detail.component.html
@@ -105,7 +105,7 @@
                     <tr *ngFor="let job of stage.allJobs" class="justify-content-between">
                       <td><a href={{genJobLogLink(job.id)}} target="_blank">{{job.id}}</a></td>
                       <td>
-                        <div *ngIf="job.name.includes('tcid'); else nonAutomatedTest"><a
+                        <div *ngIf="job.name.includes('tcid') || job.name.includes('TCID'); else nonAutomatedTest"><a
                             href={{genReadmeURL(stage.stageName,job.name)}} target="_blank">{{job.name}}</a></div>
                         <ng-template #nonAutomatedTest>{{job.name}}</ng-template>
                       </td>
