Display coverage data on pipeline Detail page
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -18,7 +18,7 @@
 						<th>Pipeline ID</th>
 						<th>Started_at</th>
 						<th>ReleaseTag</th>
-						<th>E2E test</th>
+						<th>E2E Result</th>
 						<th>Coverage</th>
 					</thead>
 					<tbody>
