--- a/src/app/pipeline-detail/pipeline-detail.component.html
+++ b/src/app/pipeline-detail/pipeline-detail.component.html
@@ -36,44 +36,43 @@
         <div class="row">
           <div class="col-md-12 text-center mt-5">
             <img src="assets/images/cloud/{{platform}}.svg" alt="gcp-logo">
-            <div class="text-secondary">
+            <div class="text-secondary my-2 ">
               <h5>Platform : {{platform}}</h5>
-              <h6>Kubernetes version 1.11.1</h6>
+              <h6>Kubernetes version 1.15.1</h6>
             </div>
           </div>
         </div>
-        <div class="text-dark mt-3">
-          <h5>Commit Details</h5>
-          <div class="border rounded">
-            <div class="row">
-              <div class="col-md-5">
-                <a href={{genGitHubURL(data.sha)}} target="_blank">
-                  <div class="mx-2 text-center">
-                    <img src="assets/images/icons/pull-request-black.svg" alt="" class="py-2 font-weight-bold"
-                      height="60">
-                    <p class="d-block text-primary">Pull Request</p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-7">
-                <div class="my-2 overflow-auto">
-                  <span>{{app_name}}</span><span class="d-block overflow-ellipsis">/#{{data.sha}}</span>
-                  <span class="d-block mt-2">@{{data.author_name}}</span>
-                </div>
-              </div>
-            </div>
-            <div class="border"></div>
-            <div class="row">
-              <div class="col-md-12 mx-1">
-                <h6 class="font-weight-bold : ">Commit Message</h6>
-                <p class="mx-2">{{data.message}}</p>
-              </div>
-            </div>
+        <div class="mt-3">
+          <div  class="text-center">
+            <svg width='100%' height='25' class="container">
+              <g>
+                <rect fill='#E6EDFF' width='100%' height='25' rx="10"></rect>
+                <rect fill='#0063FF'
+                  [ngStyle]="{'width':getCoveragePercentage(data.coverage)}"
+                  height='25'></rect>
+              </g>
+            </svg>
+            <span style="font-size: 12px;" > Coverage Percentage : {{data.coverage}}</span>
           </div>
+        <ng-template #coverageNA>
+          <span class="text-dark">NA</span>
+        </ng-template>
+        </div>
+        <div>
+          <table class="table table-hover" style="table-layout: fixed;">
+            <tr>
+              <td>Total test count : </td>
+              <td>{{data.total_coverage_count}}</td>
+            </tr>
+            <tr>
+              <td>Covered test count : </td>
+              <td>{{data.valid_test_count}}</td>
+            </tr>
+          </table>
         </div>
       </div>
       <div class="col-md-9 border-left pt-2" id="content_div">
-        <button class="btn btn-outline-secondary border-left-0 btn-expand-collapse" (click)="showHide()">commit <i
+        <button class="btn btn-outline-secondary border-left-0 btn-expand-collapse" (click)="showHide()">Coverage<i
             [ngClass]=btnIcon></i></button>
         <ul class="nav nav-pills mb-3 rounded shadow d-inline-flex float-right font-weight-light view-nav-button"
           id="pills-tab" role="tablist">
@@ -183,7 +182,7 @@
             </button>
           </div>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <ul class="list-unstyled">
             <li>
               <p>Started : <span class="font-weight-bold">{{dateFormat(data.jobs[0].started_at)}}</span></p>
