--- a/src/app/pipeline-detail/pipeline-detail.component.scss
+++ b/src/app/pipeline-detail/pipeline-detail.component.scss
@@ -185,6 +185,7 @@
   background-image: linear-gradient(111.4deg, rgba(122, 192, 233, 1) 18.8%, rgba(4, 161, 255, 1) 100.2%);
 }
 .project-overview-content {
+  // height: 80%;
   background-image: linear-gradient(180deg, #fdfbfb 40%, #ebedee 90%);
 }
 .overflow-ellipsis {
