--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <div *ngIf="userData" class="container-fluid bg-white h-100 "> -->
 <div class="container-fluid bg-white h-100 ">
     <!-- <app-header></app-header> -->
-    <div class="row shadow">
+    <div class="row border-bottom">
         <div class="col-md-12">
             <div class="row py-2">
                 <div class="col-auto mr-auto">
