--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-2">
+<div class="container-fluid mt-2 p-0">
 	<div class="row">
 		<div class="col-md-3 shadow bg-light">
 			<div class="mt-5">
