--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.html
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.html
@@ -4,10 +4,9 @@
 			<div class="mt-5">
 				<div [ngClass]="platformBtn(activePlatform, 'rancher')" class="rounded py-2 px-1 text-center" (click)="platformChange('rancher')">Rancher</div>
 			</div>
-			<!-- Disable konvoy  -->
-			<!-- <div class="mt-5">
+			<div class="mt-5">
 				<div [ngClass]="platformBtn(activePlatform, 'konvoy')"  class="rounded py-2 px-1 text-center" (click)="platformChange('konvoy')" >Konvoy</div>
-			</div> -->
+			</div>
 			<div class="mt-5">
 				<div [ngClass]="platformBtn(activePlatform, 'aws')"  class="rounded py-2 px-1 text-center" (click)="platformChange('aws')" >AWS</div>
 			</div>
