pending/queue jobs status add
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/src/app/pipeline-detail/pipeline-detail.component.scss
+++ b/src/app/pipeline-detail/pipeline-detail.component.scss
@@ -240,6 +240,9 @@
   background-color: #ffe25c;
   // color: #ffff;
 }
+.stageCreated{
+  background-color: #ffe25c;
+}
 .carousel-indicators li {
   background-color: #a9a9a9;
 }
