feat (pagination) : get more than 20 pipelines

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!-- <div *ngIf="userData" class="container-fluid bg-white h-100 "> -->
 <div class="container-fluid bg-white h-100 ">
-    <!-- <app-header></app-header> -->
     <div class="row border-bottom">
         <div class="col-md-12">
             <div class="row py-2">
@@ -11,22 +9,8 @@
                     routerLinkActive="active" style="outline: 0;"> <i
                         class="fa fa-home text-secondary font-size-25 my-auto"></i></div>
                 <div class="col-auto my-auto">
-                    <a class="btn btn-link" href="https://e2e.mayadata.io/docs/getstarted" target="_blank">E2E test
-                        plan</a>
+                    <a class="btn btn-light text-primary" href="https://e2e.mayadata.io/docs/getstarted" target="_blank">Test plan</a>
                 </div>
-                <!-- <div class="col-auto border-left d-flex align-middle pt-2">
-                    <div class="user-avatar align-middle mx-2">
-                        <img class="rounded-circle" style="height:32px; width:32px;" *ngIf="userDetails.profilePicture"
-                            src={{userDetails.profilePicture}} />
-                        <span class="bg-primary p-2 text-white " *ngIf="!userDetails.profilePicture"
-                            style="height: 32px;width: 32px; border-radius: 50%;">
-                            {{userDetails.name.charAt(0)}}
-                        </span>
-                    </div>
-                    <div class="align-middle">
-                        <p>{{userDetails.name}}</p>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
@@ -35,4 +19,3 @@
     </div>
     <app-footer></app-footer>
 </div>
-<!-- <mat-slider min="1" max="100" step="1" value="1"></mat-slider> -->
