--- a/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
+++ b/src/app/pipeline-dashboard/pipeline-dashboard.component.scss
@@ -114,7 +114,7 @@ thead {
   cursor: pointer;
 }
 .deactivePlatformBtn{
-  background-color: #D1D2D9;
-  color: #626372;
+  background-color: #ffff;
+  // color: #4959ec;
   cursor: pointer;
 }
